# merkle-proof-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  deployments.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/routes/: health.rs  justification.rs  mod.rs  proof.rs  range.rs
src/services/: avail.rs  evm.rs  merkle.rs  mod.rs
