[package]
name = "merkle-proof-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "json",
    "macros",
] }
chrono = { version = "0.4", features = ["serde"] }

# Ethereum / EVM
alloy = { version = "1", features = [
    "full",
    "provider-http",
    "sol-types",
] }

# Avail (substrate-based chain interaction via JSON-RPC)
jsonrpsee = { version = "0.25", features = ["ws-client"] }

# Crypto
sha2 = { version = "0.10" }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Configuration
dotenvy = { version = "0.15" }

# Observability (engineering-toolkit standard)
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Hex encoding
hex = { version = "0.4" }

# URL parsing
url = { version = "2" }

# Error handling
thiserror = { version = "2" }
anyhow = { version = "1" }
